-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.5
-
None
-
-
723a2c34a5e77503104a22ab53a568cdac7c6a2e (qt/qtbase/dev) 227f5bd21ff7be0be59c6b516d81a0491cb5a449 (qt/qtbase/6.2)
Qt for WebAssembly does not support tool and other windows correctly. tool windows do not have any title bar, dialog windows have a small title bar (which would be okay and which I would expect for tool windows as well). And normal windows are opened full screen.
When dragging the top area too fast, so that the mouse cursor leaves the movable area while dragging the window is kept at its last position leading to a very strange behaviour when moving dialogs.
See also attached example and demonstration video.