Make sure Qt::Popup is treated like a dialog

According to the documentation, Qt::Popup should have a proper frame
with a title bar. To honor this, two functions had to be
slightly altered.

Change-Id: I4bbc18e6b7fbec5702fad6e22ef2226c09dea15a
Fixes: QTBUG-94768
Reviewed-by: Lorn Potter <lorn.potter@gmail.com>
(cherry picked from commit 723a2c34a5e77503104a22ab53a568cdac7c6a2e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>