src/plugins/platforms/wasm/qwasmintegration.cpp
@@ -254,8 +254,8 @@ QVariant QWasmIntegration::styleHint(QPlatformIntegration::StyleHint hint) const
 
 Qt::WindowState QWasmIntegration::defaultWindowState(Qt::WindowFlags flags) const
 {
-    // Don't maximize dialogs
-    if (flags & Qt::Dialog & ~Qt::Window)
+    // Don't maximize dialogs or popups
+    if (flags.testFlag(Qt::Dialog) || flags.testFlag(Qt::Popup))
         return Qt::WindowNoState;
 
     return QPlatformIntegration::defaultWindowState(flags);
